--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
                     <li>
                         <button id="evo" class="boton-menu boton-categoria">ropaevo</button>
                     </li>
-
                     <li class="carritocaja">
                         <a class="boton-menu boton-carrito" href="./carrito.html">
                             <i class="bi bi-cart-fill"></i> Carrito <span id="numerito" class="numerito">0</span>
@@ -74,7 +73,9 @@
             <section class="cuerpo">
                 <div class="img-fondo">
                     <div class="eslogan">
-                        <p>donde la moda se encuentra con la personalización en cada paso!</p>
+                        <div class="logo12">
+                        </div>
+                        <p></p>
                     </div>
                 </div>
             </section>
@@ -95,7 +96,7 @@
                 </div>
             </section>
             <section class="categorias2">
-                <h2>Categorias</h2>
+                <h2> Algunas de las categorias</h2>
                 <div class="caja">
                     <div class="mujeres"><h3>Zapatillas</h3></div>
                     <div class="btns">
