--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CarpiShop</title>
+    <title>bombay</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
@@ -36,35 +36,43 @@
                     <li>
                         <button id="todos" class="boton-menu boton-categoria active"> Todos los productos</button>
                     </li>
-                    <li>
-                        <button id="zapatillas" class="boton-menu boton-categoria">zapatillas</button>
-                    </li>
-                    <li>
-                        <button id="electronico" class="boton-menu boton-categoria">electronico</button>
-                    </li>
-                    <li>
-                        <button id="zapatos" class="boton-menu boton-categoria">zapatos</button>
-                    </li>
-                    <li>
-                        <button id="sandalias" class="boton-menu boton-categoria">sandalias</button>
-                    </li>
-                    <li>
-                        <button id="bolsos" class="boton-menu boton-categoria">Bolsos</button>
-                    </li>
-                    <li>
-                        <button id="relojes" class="boton-menu boton-categoria">relojes</button>
-                    </li>
-                    <li>
-                        <button id="urban" class="boton-menu boton-categoria">urban</button>
-                    </li>
-                    <li>
-                        <button id="evo" class="boton-menu boton-categoria">ropaevo</button>
-                    </li>
+                    <span id="menu34" class="material-symbols-outlined">
+                        menu
+                    </span>
+                    <div id="rop" class="rop">
+                        <li>
+                            <button id="zapatillas" class="boton-menu boton-categoria">zapatillas</button>
+                        </li>
+                        <li>
+                            <button id="electronico" class="boton-menu boton-categoria">electronico</button>
+                        </li>
+                        <li>
+                            <button id="zapatos" class="boton-menu boton-categoria">zapatos</button>
+                        </li>
+                        <li>
+                            <button id="sandalias" class="boton-menu boton-categoria">sandalias</button>
+                        </li>
+                        <li>
+                            <button id="bolsos" class="boton-menu boton-categoria">Bolsos</button>
+                        </li>
+                        <li>
+                            <button id="relojes" class="boton-menu boton-categoria">relojes</button>
+                        </li>
+                        <li>
+                            <button id="urban" class="boton-menu boton-categoria">urban</button>
+                        </li>
+                        <li>
+                            <button id="evo" class="boton-menu boton-categoria">ropaevo</button>
+                        </li>
+
+                    </div>
                     <li class="carritocaja">
                         <a class="boton-menu boton-carrito" href="./carrito.html">
                             <i class="bi bi-cart-fill"></i> Carrito <span id="numerito" class="numerito">0</span>
                         </a>
                     </li>
+                    <div class="logo12">
+                    </div>
                 </ul>
             </nav>
             <div id="paypal-button-container"></div>
@@ -73,8 +81,6 @@
             <section class="cuerpo">
                 <div class="img-fondo">
                     <div class="eslogan">
-                        <div class="logo12">
-                        </div>
                         <p></p>
                     </div>
                 </div>
