--- a/pagos.html
+++ b/pagos.html
@@ -13,9 +13,9 @@
         </div>
         <div class="normal">
             <div>
-                <img src="" alt="">
+                <img id="imgpagos" src="" alt="">
             </div>
-            <button class="epayuu" >TERMINAR LA TRANSACCION</button>
+            <button id="epayuu" >TERMINAR LA TRANSACCION</button>
         </div>
     </div>
     
